# talk-with-quran-pdf

./: app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
